packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/eq-001.expr
amount == 0
# expect: TTRP-EQ-001
